--- a/Program.ipynb
+++ b/Program.ipynb
@@ -3,7 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "daa6971c",
+   "id": "ab3b9d89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: humanfriendly in c:\\users\\harthana\\anaconda3\\lib\\site-packages (9.2)\n",
+      "Requirement already satisfied: pyreadline in c:\\users\\harthana\\anaconda3\\lib\\site-packages (from humanfriendly) (2.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install humanfriendly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "82533e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ae3314ed",
+   "execution_count": 3,
+   "id": "e8453399",
    "metadata": {},
    "outputs": [],
    "source": [
     "frequency = {}\n",
-    "sorucefile = open( 't8.shakespeare.txt', 'r+' )\n",
+    "sourcefile = open( 't8.shakespeare.txt', 'r+' )\n",
     "tempfile=open( 't8.shakespeare.translated.txt', 'w' )\n",
     "\n",
     "#Fetch each line from sourcefile.\n",
-    "for line in sorucefile:\n",
+    "for line in sourcefile:\n",
     "    #Fetch each word from line.\n",
     "    for word in line.split(' '):\n",
     "      #Check whether the word is in my_dict{} and not equal to new line.\n",
@@ -52,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "29aeec3e",
+   "execution_count": 4,
+   "id": "6e056c1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8bf6c97b",
+   "execution_count": 5,
+   "id": "56734ba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,27 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "445f9554",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: humanfriendly in c:\\users\\harthana\\anaconda3\\lib\\site-packages (9.2)\n",
-      "Requirement already satisfied: pyreadline in c:\\users\\harthana\\anaconda3\\lib\\site-packages (from humanfriendly) (2.1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install humanfriendly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "41ef5812",
+   "execution_count": 6,
+   "id": "354b9b0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6eeeb38",
+   "id": "41fbbee2",
    "metadata": {},
    "outputs": [],
    "source": []
